"use strict";
class MovableSceneryModel {
    constructor(center_x, bottom_y) {
        this.center_x = center_x;
        this.bottom_y = bottom_y;
    }
}
