abstract class GroundModel {

}