class RoadModel extends GroundModel {
    public static readonly colors = <RoadColor>{
        fill: '#4d6054',
        outline: '#1c2829',
    };
}