class SandModel extends GroundModel{
    public static readonly color = '#e9e7c8';
}